src/objects/zkmulti__CommercialInvoice__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Carrier__c</fullName>
        <label>Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Comments_Extended__c</fullName>
        <label>Comments Extended</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DeclarationStatement__c</fullName>
        <label>Declaration Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Discount__c</fullName>
        <label>Discount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__FreightCharges__c</fullName>
        <label>Freight Charges</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__FromTaxID__c</fullName>
        <label>From TaxID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__HandlingCosts__c</fullName>
        <label>Handling Costs</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__InsuranceCharges__c</fullName>
        <label>Insurance Charges</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__OriginatorName__c</fullName>
        <label>Originator Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__OtherChargesDescription__c</fullName>
        <label>Other Charges Description</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__OtherChargesType__c</fullName>
        <label>Other Charges Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commissions</fullName>
                </value>
                <value>
                    <fullName>Discounts</fullName>
                </value>
                <value>
                    <fullName>Handling Fees</fullName>
                </value>
                <value>
                    <fullName>Royalties and License Fees</fullName>
                </value>
                <value>
                    <fullName>Taxes</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__OtherCharges__c</fullName>
        <label>Other Charges</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__OverrideSoldTo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Sold To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackingCosts__c</fullName>
        <label>Packing Costs</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__PartiesToTransactionAreRelated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parties to Transaction are Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Not Sold</fullName>
                </value>
                <value>
                    <fullName>Personal Effects</fullName>
                </value>
                <value>
                    <fullName>Repair and Return</fullName>
                </value>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__ReasonForExport__c</fullName>
        <label>Reason for Export</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>IntercompanyData</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__ReferenceValue__c</fullName>
        <label>Reference Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ShipToTaxID__c</fullName>
        <label>Ship To TaxID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commercial Invoices</relationshipLabel>
        <relationshipName>Commercial_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToCity__c</fullName>
        <label>Sold To City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToCompanyName__c</fullName>
        <label>Sold To Company Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToContactName__c</fullName>
        <label>Sold To Contact Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Commercial Invoices</relationshipLabel>
        <relationshipName>Commercial_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToCountry__c</fullName>
        <label>Sold To Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToPhone__c</fullName>
        <label>Sold To Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToStateProvince__c</fullName>
        <label>Sold To State/Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToStreet__c</fullName>
        <label>Sold To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToTaxID__c</fullName>
        <label>Sold To TaxID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToZipPostalCode__c</fullName>
        <label>Sold To Zip/Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SpecialInstructionsExtended__c</fullName>
        <label>Special Instructions Extended</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__SpecialInstructions__c</fullName>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__TermsOfSale__c</fullName>
        <label>Terms of Sale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carriage Insurance Paid (CIP)</fullName>
                </value>
                <value>
                    <fullName>Carriage Paid TO (CPT)</fullName>
                </value>
                <value>
                    <fullName>Cost and Freight (CFR)</fullName>
                </value>
                <value>
                    <fullName>Cost Insurance and Freight (CIF)</fullName>
                </value>
                <value>
                    <fullName>Delivered at Place (DAP)</fullName>
                </value>
                <value>
                    <fullName>Delivered at Terminal (DAT)</fullName>
                </value>
                <value>
                    <fullName>Delivered Duty Paid (DDP)</fullName>
                </value>
                <value>
                    <fullName>Delivered Duty Unpaid (DDU)</fullName>
                </value>
                <value>
                    <fullName>Ex Works (EXW)</fullName>
                </value>
                <value>
                    <fullName>Free Carrier (FCA)</fullName>
                </value>
                <value>
                    <fullName>Free On Board (FOB)</fullName>
                    <default>true</default>
                    <label>Free On Board (FOB)</label>
                </value>
                <value>
                    <fullName>Delivered at Frontier (DAF)</fullName>
                </value>
                <value>
                    <fullName>Delivered Ex Quay (DEQ)</fullName>
                </value>
                <value>
                    <fullName>Delivered Ex Ship (DES)</fullName>
                </value>
                <value>
                    <fullName>Free Alongside Ship (FAS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Commercial Invoice</label>
    <nameField>
        <displayFormat>COM-INV-{00000000}</displayFormat>
        <label>Commercial Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>